--- a/app/Resources/views/main/apropos.html.twig
+++ b/app/Resources/views/main/apropos.html.twig
@@ -7,11 +7,29 @@
 {% endblock %}
 
 {% block body %}
-    <div class="well" id="contain">
-        <h1>A Propos</h1>
-
+    <div class="container-fluid heading-page">
+        <h1 class="text-center">à propos</h1>
+        <p class="text-center">Accueil >> à propos</p>
     </div>
+    <img src="{{ asset('bundles/app/img/template/wave-driedwood.svg') }}" alt="vague" style="width: 100%">
 
+	<section class="mt-5">
+		<div class="container">
+			<div class="heading">
+				<h2>qui sommes-nous</h2>
+				<span>Et pourquoi nous défendons la cause ornithologique.</span>
+			</div>
+			<div class="media align-items-center">
+				<img class="col-4 rounded mr-4 p-0" src="{{ asset('bundles/app/img/amethyste.jpg') }}" alt="étourneau améthyste">
+				<div class="media-body">
+					<h3 class="mt-0">Présentation de l'association</h3>
+					<p class="text-justify">Nos amis les oiseaux (NAO) est une association de protection de l'environnement française fondée en 1983 ayant pour objectif « la protection des oiseaux et des écosystèmes dont ils dépendent et, en particulier, la faune et la flore qui y sont associées ». <br>
+Nos amis les oiseaux est engagée sur l’ensemble du territoire national Français et se mobilise pour la protection de la biodiversité. A travers un réseau de naturalistes professionnels et amateurs qui partagent tous une passion pour les oiseaux et leur environnement naturel, « Nos amis les oiseaux » collecte des données d’observation afin de déterminer l’influence du climat sur la biodiversité. <br>
+C’est grâce à l’engagement de chacun que nous pouvons mieux comprendre l’évolution des oiseaux dans leur milieu naturel et que nous pouvons rendre publics nos conclusions scientifiques. Amis des oiseaux ! C’est ensembles que nous contribuons à transmettre aux futures générations les valeurs essentielles pour mieux vivre avec la nature qui nous entoure.</p>
+				</div>
+			</div>
+		</div>
+	</section>
 
 {% endblock %}
 
