--- a/src/AppBundle/Resources/public/css/actualite.css
+++ b/src/AppBundle/Resources/public/css/actualite.css
@@ -1,35 +1,19 @@
-#headContainer
-{
-    height: 200px;
-    background-color: #f7f3f0;
+
+.profilePicture {
+    border-radius: 25px;
+    height: 70px;
 }
 
-#logo
-{
-    display: block;
-    height: 75px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.profilePicture
-{
-    border-radius: 50%;
-    height: 50px;
-}
-
-.imgComment
-{
-    border-radius: 50%;
+.imgComment {
+    border-radius: 25px;
     height: 40px;
 }
 
-.imgActualite
-{
+.imgActualite {
     border-radius: 25px;
 }
 
-.comments{
+.comments {
     margin-top: 20px;
     height: 200px;
     overflow: scroll;
@@ -37,14 +21,10 @@
     border-radius: 25px;
 }
 
-.form-control{
+.form-control {
     border: none;
 }
 
-.addComment
-{
-    margin-top: 20px;
-    border: 2px solid #dbd6d0;
-    border-radius: 25px;
+.social-comment {
+    color: #6d49d1;
 }
-
