--- a/src/AppBundle/Resources/public/css/base.css
+++ b/src/AppBundle/Resources/public/css/base.css
@@ -30,6 +30,10 @@ body {
 ------------------
 ------------------*/
 
+.rounded {
+  border-radius: 25px !important;
+}
+
 .card {
     border: none;
 }
@@ -62,11 +66,6 @@ body {
     background: #53399e;
 }
 
-.form-control {
-    border: #ded6cd;
-    border-radius: 50px;
-}
-
 /*----------------
 ------------------
 ------HEADER------
@@ -87,8 +86,11 @@ body {
     font-family: "Raleway";
 }
 
-.login-tools {
-
+.heading-page {
+    background-color: #F7F3F1;
+    height: 200px;
+    margin-top: -80px;
+    padding-top: 100px;
 }
 
 /*----------------
@@ -192,7 +194,6 @@ span {
   color: #262626;
   padding-bottom: 10px;
   margin-bottom: 60px;
-  text-transform: uppercase;
 }
 
 .heading::after {
@@ -219,7 +220,7 @@ input {
     background: #FFFEF9;
 }
 
-input[placeholder], [placeholder], *[placeholder] {
+input, input[placeholder], [placeholder], *[placeholder] {
     margin-left: 30px;
 }
 
@@ -227,9 +228,9 @@ input[placeholder], [placeholder], *[placeholder] {
     color: rgba(255, 254, 249, 0.7);
 }
 
-.input-group {
+.input-group, .form-group {
     border-radius: 50px !important;
-    background: #FFFEF9;
+    background: #FFFFFF;
     border: 2px solid #DED5CD;
 }
 
@@ -239,4 +240,9 @@ input[placeholder], [placeholder], *[placeholder] {
     background: #6d49d1;
     border-radius: 50px !important;
     margin-right: 6px;
+}
+
+.form-control {
+  background: none;
+  border: none;
 }
