--- a/app/Resources/views/main/contact.html.twig
+++ b/app/Resources/views/main/contact.html.twig
@@ -16,12 +16,26 @@
 	<section class="mt-5">
 		<div class="container">
 			<div class="heading">
-				<h3>3 étapes</h2>
+				<h3>3 étapes</h3>
 				<p>Vous rencontrez un souci ou vous avez tout simplement quelques questions ? Jetez d’abord un oeil aux FAQ !
 Si vous ne trouvez pas l’information que vous souhaitiez, n’hésitez pas à nous contacter à l’aide de ce formulaire !</p>
 			</div>
-			<div class="row justify-content-around">
-				
+			<div class="row">
+				<div class="col-12 col-lg-6 mx-auto">
+					<h4 class="text-center mb-4">Contact</h4>
+					<div class="form-group align-items-center">
+					    <input type="text" id="subject" name="subject" required="required" placeholder="Sujet *" class="form-control" />
+					</div>
+					<div class="form-group align-items-center">
+					    <input type="text" id="mail" name="mail" required="required" placeholder="Email *" class="form-control" />
+					</div>
+					<div class="form-group align-items-start">
+						<textarea name="message" id="message" cols="30" rows="10" placeholder="Message *" class="form-control"></textarea>
+					</div>
+					<div class="text-center justify-content-center">
+				        <button role="submit" class="text-center btn btn-primary mx-auto" href="#">ENVOYER</button>
+				    </div>
+				</div>
 			</div>
 		</div>
 	</section>
