CSS: Fix sur les formulaires

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -101,7 +101,7 @@
                     <p>à notre newsletter</p>
                 </div>
                 <div class="col-7">
-                    <div class="input-group align-items-center">
+                    <div class="input-group align-items-center mb-0">
                         <input type="text" class="form-control" placeholder="Email address">
                         <a class="input-group-addon text-center" href="#"><span class="fa fa-envelope input-group-icon"></span></a>
                     </div>
