CSS: Page login (template et formulaire)
Reste à gérer le comportement des labels

--- a/app/Resources/views/main/contact.html.twig
+++ b/app/Resources/views/main/contact.html.twig
@@ -7,11 +7,11 @@
 {% endblock %}
 
 {% block body %}
-    <div class="container-fluid heading-page">
-      <h1 class="text-center">CONTACT</h1>
-      <p class="text-center">Accueil >> Contact</p>
-  </div>
-  <img src="{{ asset('bundles/app/img/template/wave-driedwood.svg') }}" alt="vague" style="width: 100%">
+	<div class="container-fluid heading-page">
+		<h1 class="text-center">CONTACT</h1>
+		<p class="text-center">Accueil >> Contact</p>
+	</div>
+	<img src="{{ asset('bundles/app/img/template/wave-driedwood.svg') }}" alt="vague" style="width: 100%">
 
 	<section class="mt-5">
 		<div class="container">
@@ -32,8 +32,8 @@ Si vous ne trouvez pas l’information que vous souhaitiez, n’hésitez pas à 
 					<div class="form-group align-items-start">
 						<textarea name="message" id="message" cols="30" rows="10" placeholder="Message *" class="form-control"></textarea>
 					</div>
-					<div class="text-center justify-content-center">
-				        <button role="submit" class="text-center btn btn-primary mx-auto" href="#">ENVOYER</button>
+					<div class="text-center">
+				        <button role="submit" class="btn btn-primary mx-auto" href="#">ENVOYER</button>
 				    </div>
 				</div>
 			</div>
