--- a/app/Resources/views/main/validation.html.twig
+++ b/app/Resources/views/main/validation.html.twig
@@ -1,9 +1,38 @@
 {% extends 'base.html.twig' %}
 
-
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('bundles/app/css/validation.css') }}">
+{% endblock %}
 {% block title %}Valider: Observations{% endblock %}
 
 {% block body %}
-    <h1>Ici sera afficher toute les observations faites par les utilisateurs</h1>
-    <p><img src="{{ asset('bundles/main/img/in_construct.gif') }}" alt="En construction"></p>
+    <div class="container">
+    <div class="d-flex flex-row justify-content-between row-h1">
+        <div class="row">
+
+
+            {% for waitingObservation in waitingObservations  %}
+                <div class="col-6">
+                    <div class="p-2 m-1 item-h1 observation">
+                        <div class="row">
+                            <div class="col-3">
+                                <img src="{{ waitingObservation.picture }}" alt="prise par {{ waitingObservation.user.username }}" class="observationPicture">
+                            </div>
+                            <div class="col-9">
+                                <div class="text-right">
+                                    <p class="text-muted">Observé il y a {{ waitingObservation.updateAt | ago }}</p>
+                                </div>
+                                <h3>{{ waitingObservation.bird.name | capitalize }}</h3>
+                                <p>{{ waitingObservation.bird.cdName }}</p>
+                                <p class="text-right">
+                                    <i class="fa fa-heart fa-3x" aria-hidden="true"><span class="badge badge-primary">{{ waitingObservation.vote }}</span></i></p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
