--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -39,7 +39,7 @@
                         </div>
                     {% endfor %}
                     {{ form_start(form) }}
-                    {{ form_row(form._username) }}
+                    {{ form_row(form._username, {'attr':{'placeholder':'mon placeholder', 'class' : 'maClasse'}}) }}
                     {{ form_row(form._password) }}
 
                     <button type="submit" class="btn btn-primary" formnovalidate>Connexion</button>
